crates/aven-check/tests/fixtures/check/invalid/pattern-binding-missing-field.av
{ missing } = { present: 1 }
missing
